Renamed 'Renderer' (from GUI) to Renderer2D
This rename was done to prevent name collision
and stack corruption. Previously, when I renamed
'GUIRenderer' to 'Renderer', it conflicted
with the 'Renderer' from the graphics module.

--- a/sunglasses/src/GUI/CMakeLists.txt
+++ b/sunglasses/src/GUI/CMakeLists.txt
@@ -3,7 +3,7 @@ add_sources(
     Button.cpp
     Drawable.cpp
     Label.cpp
-    Renderer.cpp
+    Renderer2D.cpp
     View.cpp
     ViewController.cpp
     Window.cpp
