Created a signals/slots system

--- a/sunglasses/src/GUI/CMakeLists.txt
+++ b/sunglasses/src/GUI/CMakeLists.txt
@@ -3,12 +3,12 @@ add_sources(
     Button.cpp
     Control.cpp
     Drawable.cpp
-    Event.cpp
     Label.cpp
     Renderer2D.cpp
     Panel.cpp
     Controller.cpp
     Window.cpp
+    Signal.cpp
 ) 
 
 add_sources_to_parent()
