Moved the signal code from GUI to Core

--- a/sunglasses/src/Core/CMakeLists.txt
+++ b/sunglasses/src/Core/CMakeLists.txt
@@ -10,6 +10,7 @@ add_sources(
     Service.cpp
     ServiceManager.cpp
     Process.cpp
+    Signal.cpp
 )
 
-add_sources_to_parent() 
+add_sources_to_parent()
