Created the FramebufferQueue class

--- a/sunglasses/src/Graphics/CMakeLists.txt
+++ b/sunglasses/src/Graphics/CMakeLists.txt
@@ -11,6 +11,7 @@ add_sources(
     Vertex.cpp
     GeometryBuffer.cpp
     Framebuffer.cpp
+    FramebufferQueue.cpp
 )
 
 add_subdirectory(Loaders)
