Created the 'graphics' namespace

--- a/sunglasses/src/CMakeLists.txt
+++ b/sunglasses/src/CMakeLists.txt
@@ -8,7 +8,7 @@ add_subdirectory(Graphics)
 add_subdirectory(GUI)
 add_subdirectory(Input)
 add_subdirectory(Output)
-add_subdirectory(Physics)
+#add_subdirectory(Physics)
 add_subdirectory(Scripting)
 
 add_sources_to_parent()
