--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.2)
 
 #add_subdirectory(Feature)
 add_subdirectory(GUI)
-#add_subdirectory(Voxel)
+add_subdirectory(Voxel)
